--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
         <link rel="shortcut icon" href="Binaries/gb.ico">
         <title>GBA Games</title>
         <meta charset="UTF-8">
+<style>
+p.small {
+  line-height: 0.7;
+}
+
+p.big {
+  line-height: 1.8;
+}
+</style>
     </head>
     <body style="background:rgb(248, 237, 224);">
         <h1>Welcome to the GBA Emulator</h1>
         <img src="Binaries/gba.png" alt="GBA Logo">
-        <h2>Select a game:</h2>
+       <h2 class="small">Select a game:</h2>
         <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
           <ul>
+		<p> Sorted from oldest to newest added. </p>
                           <li><a href="./launcher.html#007">007 - Everything Or Nothing</a></li>
               <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
               <li><a href="./launcher.html#advancewars2">Advance Wars 2</a></li>
@@ -190,14 +200,15 @@
           </ul>
               <h3>Gameboy Game Collections</h3>
           <ul>
+		<p> Sorted from oldest to newest added. </p>
               <li><a href="./launcher.html#pokemongb">The Pokemon Collection</a></li>
               <li><a href="./launcher.html#marioland">The Mario Land Collection</a></li>
           </ul>
               <h3>NES Game Collections</h3>
           <ul>
+		<p> Sorted from oldest to newest added. </p>
               <li><a href="./launcher.html#nesgh1">NES Greatest Hits 1</a></li>
           </ul>
         </main>
-      <h2>For Info On: Game Collections, Controls, And Some Other Cool Stuff. Check Out The Wiki: <a href="https://github.com/Browncha023/GBA/wiki" target="_blank"><img src="Binaries/here.png" alt="here"></a></h2>
     </body>
 </html>
