--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ p.big {
 }
 </style>
     </head>
-    <body style="background:rgb(248, 237, 224);">
-        <h1>Welcome to the GBA Emulator</h1>
+    <body style="background:rgb(206, 147, 224);">
+        <h1>Welcome!</h1>
         <img src="Binaries/gba.png" alt="GBA Logo">
        <h2 class="small">Select a game:</h2>
-        <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
+        <main style="border:5px black solid; border-radius:25px; background:rgb(122, 122, 122);padding-left:20px;">
           <ul>
 		<p> Sorted from oldest to newest added. </p>
                           <li><a href="./launcher.html#007">007 - Everything Or Nothing</a></li>
@@ -197,6 +197,7 @@ p.big {
                           <li><a href="./launcher.html#ynfa">Yggdra Union - We'll Never Fight Alone</a></li>
               <li><a href="./launcher.html#zelda_past">The Legend of Zelda: A Link to the Past</a></li>
               <li><a href="./launcher.html#zelda_minish">The Legend of Zelda: The Minish Cap</a></li>
+              <li><a href="./launcher.html#ratatouille">Ratatouille</a></li>	
           </ul>
               <h3>Gameboy Game Collections</h3>
           <ul>
